forgot password feature, login, logout feature added with jwt

--- a/src/pages/password-reset/passwordReset.style.css
+++ b/src/pages/password-reset/passwordReset.style.css
@@ -1,7 +1,6 @@
-.login-page {
+.password-reset-pagee {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-	background-color: skyblue;
 }
