--- a/src/components/add-employee/addEmployee.style.css
+++ b/src/components/add-employee/addEmployee.style.css
@@ -1,8 +1,8 @@
-.employee-form{
+/* .employee-form{
    width:450px;
    align-items: center;
    margin-left: 450px;
    margin-top: 50px;
   
    
-}
+} */
